--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,10 @@ php:
 install:
   - composer install
 script:
-  - sh phpunit
+  - vendor/bin/phpunit --coverage-clover coverage.xml
+
+after_script:
+  # upload coverage.xml file to Coveralls to analyze it
+  # minimal required coverage is set to 80+ %
+  - wget https://github.com/satooshi/php-coveralls/releases/download/v1.0.1/coveralls.phar
+  - php coveralls.phar --verbose
