--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -103,6 +103,7 @@ return PhpCsFixer\Config::create()
             ->in([
                 __DIR__.'/src',
                 __DIR__.'/Tests',
+                __DIR__.'/features',
             ])
     )
 ;
