--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.16",
         "phpstan/phpstan-symfony": "^0.12.4",
-        "phpunit/phpunit": "^9.0"
+        "phpunit/phpunit": "^9.0",
+        "behat/behat": "^3.6",
+        "phpunit/php-code-coverage": "^8.0"
     },
     "license": "mit",
     "authors": [
@@ -25,7 +27,8 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Aplorm\\Lexer\\Tests\\": "Tests/"
+            "Aplorm\\Lexer\\Tests\\": "Tests/",
+            "Aplorm\\Lexer\\Behat\\": "features/"
         }
     },
     "repositories": [
