--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+env:
+  - TRAVIS=true
 language: php
 php:
   - '7.4.3'
@@ -5,8 +7,11 @@ install:
   - composer install
 script:
   - vendor/bin/phpunit --coverage-clover coverage.xml
+  - vendor/bin/phpstan analyse src tests features --level=7
+  - vendor/bin/php-cs-fixer fix -v --show-progress=estimating-max --diff-format=udiff
 
 after_script:
   # upload coverage.xml file to Coveralls to analyze it
   # minimal required coverage is set to 80+ %
   - php coveralls.phar --verbose
+  - php coveralls.phar --verbose -x coverage-behat.xml
